--- a/startpagina.html
+++ b/startpagina.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="startpagina.css">
     <script src="startpagina.js"></script>
 </head>
+
 <body>
     <main>
-        <img src="assets/Rouwtaak 1.png" width="400px">
         <h1>Drop&Heal</h1>
+        <img src="assets/Rouwtaak 1.png" alt="achtergronddecoratie">
+        <p>Welkom bij Drop&Heal. Een veilige plek voor jouw reis door rouwverwerking. Er volgt eerst een introductie en kennismaking, 
+            hierna kan je op eigen tempo aan de slag in de omgeving. </p>
+        <a href="begin.html" class="startbutton" aria-label="startknop naar volgende pagina">Start in een veilige omgeving</a>
     </main>
+
+    <footer>
+        <p>&copy; 2024 Drop&Heal. Alle rechten voorbehouden.</p>
+    </footer>
 </body>
 </html>
