Kleine media query fix?

--- a/begin.html
+++ b/begin.html
@@ -6,8 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="startpagina.css">
 </head>
+
 <body>
     <main>
+        <section>
         <p>Drop & Heal is een metafoor voor het loslaten van de zware last van verdriet en het starten van een helend proces. 
             Als een druppel in het water valt, wordt het onderdeel van een groter, krachtiger geheel, dit gebeurt ook wanneer we ons verdriet delen. 
             ‘Drop’ verwijst naar het moment waarop je je verdriet of emoties deelt, laat vallen, of erkent.’Heal’ staat voor het genezingsproces dat volgt, 
@@ -15,7 +17,9 @@
             het los te laten en jezelf toe te staan te helen, stap voor stap, druppel voor druppel.
         </p>
         <a href="introductiealgemeen.html" class="volgendepagina" aria-label="knop naar introductie">--></a>
+        </section>
     </main>
+    
     <footer>
         <p>&copy; 2024 Drop&Heal. Alle rechten voorbehouden.</p>
     </footer>
