--- a/introductiealgemeen.html
+++ b/introductiealgemeen.html
@@ -7,8 +7,18 @@
     <link rel="stylesheet" href="startpagina.css">
 </head>
 <body>
-    <h1>Introductie Algemeen</h1>
+
+    <header>
+        <h1>Introductie Algemeen</h1>
+    </header>
+
+    <main>
     <h2>Privacy</h2>
     <p>Jouw privacy en comfort zijn onze prioriteit. Alles wat je deelt blijft vertrouwelijk.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Drop&Heal. Alle rechten voorbehouden.</p>
+    </footer>
 </body>
 </html>
