--- a/startpagina.html
+++ b/startpagina.html
@@ -9,12 +9,17 @@
 </head>
 
 <body>
+    <header>
+        <h1>Drop <br> &Heal</h1>
+    </header>
     <main>
-        <h1>Drop&Heal</h1>
-        <img src="assets/Rouwtaak 1.png" alt="achtergronddecoratie">
+        <section>
+        <img src="assets/Rouwtaak 1.png" width=400px class="achtergrond1" alt="achtergronddecoratie blauw">
+        <img src="assets/06728062e3721e12b38b495b488c174d.png" width=650px class="achtergrond2" alt="achtergronddecoratie blauw">
         <p>Welkom bij Drop&Heal. Een veilige plek voor jouw reis door rouwverwerking. Er volgt eerst een introductie en kennismaking, 
             hierna kan je op eigen tempo aan de slag in de omgeving. </p>
         <a href="begin.html" class="startbutton" aria-label="startknop naar volgende pagina">Start in een veilige omgeving</a>
+        </section>
     </main>
 
     <footer>
